class 4 covering pandas and numpy

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,6 +1246,235 @@
     "markD = (\"name\": student,\n",
     "        'marks1':marks1\n",
     "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marksheet = {\n",
+    "    'Python1' :[23,52,59,55,48],\n",
+    "    'Python2' :[54,56,57,55,51],\n",
+    "    'Python3' :[59,42,58,52,53],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students = ['Ahmed','Daniyal','Zain','Ahsan','Faraz']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasheet = pd.DataFrame(marksheet,index=students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Python1</th>\n",
+       "      <th>Python2</th>\n",
+       "      <th>Python3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Ahmed</th>\n",
+       "      <td>23</td>\n",
+       "      <td>54</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Daniyal</th>\n",
+       "      <td>52</td>\n",
+       "      <td>56</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zain</th>\n",
+       "      <td>59</td>\n",
+       "      <td>57</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ahsan</th>\n",
+       "      <td>55</td>\n",
+       "      <td>55</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Faraz</th>\n",
+       "      <td>48</td>\n",
+       "      <td>51</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Python1  Python2  Python3\n",
+       "Ahmed         23       54       59\n",
+       "Daniyal       52       56       42\n",
+       "Zain          59       57       58\n",
+       "Ahsan         55       55       52\n",
+       "Faraz         48       51       53"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasheet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Python1</th>\n",
+       "      <th>Python2</th>\n",
+       "      <th>Python3</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Ahmed</th>\n",
+       "      <td>23</td>\n",
+       "      <td>54</td>\n",
+       "      <td>59</td>\n",
+       "      <td>136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Daniyal</th>\n",
+       "      <td>52</td>\n",
+       "      <td>56</td>\n",
+       "      <td>42</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zain</th>\n",
+       "      <td>59</td>\n",
+       "      <td>57</td>\n",
+       "      <td>58</td>\n",
+       "      <td>174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ahsan</th>\n",
+       "      <td>55</td>\n",
+       "      <td>55</td>\n",
+       "      <td>52</td>\n",
+       "      <td>162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Faraz</th>\n",
+       "      <td>48</td>\n",
+       "      <td>51</td>\n",
+       "      <td>53</td>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Python1  Python2  Python3  Total\n",
+       "Ahmed         23       54       59    136\n",
+       "Daniyal       52       56       42    150\n",
+       "Zain          59       57       58    174\n",
+       "Ahsan         55       55       52    162\n",
+       "Faraz         48       51       53    152"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasheet['Total'] = datasheet.Python1+datasheet.Python2+datasheet.Python3\n",
+    "datasheet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-23-e9f841e41be3>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-23-e9f841e41be3>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    if( for i in datasheet.Python1.value i > 50 and for i in datasheet.Python2.value i > 50 and datasheet.Python3.value > 50)\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "datasheet['Status']=[\n",
+    "    if( for i in datasheet.Python1.value i > 50 and for i in datasheet.Python2.value i > 50 and datasheet.Python3.value > 50)\n",
+    "        datasheet.Status =\"Pass\" \n",
+    "    else \n",
+    "        datasheet.Status = \"Fail\"\n",
+    "]"
    ]
   },
   {
